BTL/assignment1/assignment1/initial/src/main/csel/parser/.antlr/CSELParser.py
# Generated from c:\Users\S540\Documents (2)\BK course\Ki_202\nguyen ly ngon ngu lap trinh\PPL_202_HCMUT\assignment1\assignment1\initial\src\main\csel\parser\CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Break'", "'Continue'", "'If'", "'Elif'", "'Else'", 
                     "'While'", "'For'", "'Of'", "'In'", "'Function'", "'Let'", 
                     "'True'", "'False'", "'Call'", "'Return'", "'Number'", 
                     "'Boolean'", "'String'", "'JSON'", "'Array'", "'Constant'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'+.'", "'==.'", "'('", "')'", "'['", "']'", "':'", 
                     "'.'", "','", "';'", "'{'", "'}'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "NUMBER_LIT", "BOOLEAN_LIT", "STRING_LIT", 
                      "BREAK", "CONTINUE", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "OF", "IN", "FUNCTION", "LET", "TRUE", "FALSE", 
                      "CALL", "RETURN", "NUMBER", "BOOLEAN", "STRING", "JSON", 
                      "ARRAY", "CONSTANT", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "NOT", "AND", "OR", "ASSIGN", "EQ", "NEQ", "LT", "GT", 
                      "LTE", "GTE", "ADDS", "EQS", "LP", "RP", "LSB", "RSB", 
                      "COLON", "DOT", "COMMA", "SEMI", "LCB", "RCB", "DF", 
                      "ID", "ID_WITH_DOLLAR", "WS", "BLOCK_COMMENT", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_var_declare = 2
    RULE_vars_list = 3
    RULE_var_typ_asg = 4
    RULE_constant_declare = 5
    RULE_constant_id_list = 6
    RULE_constant_assign = 7
    RULE_id_array = 8
    RULE_number_list = 9
    RULE_data_types = 10
    RULE_func_declare = 11
    RULE_params_list = 12
    RULE_param = 13
    RULE_stmt = 14
    RULE_assign_stmt = 15
    RULE_index_operator = 16
    RULE_key_operator = 17
    RULE_if_stmt = 18
    RULE_elseif_list = 19
    RULE_elseif_func = 20
    RULE_else_func = 21
    RULE_while_stmt = 22
    RULE_for_stmt = 23
    RULE_for_in_stmt = 24
    RULE_for_of_stmt = 25
    RULE_brk_stmt = 26
    RULE_cont_stmt = 27
    RULE_ret_stmt = 28
    RULE_ret_stmt_proc = 29
    RULE_ret_stmt_func = 30
    RULE_call_stmt = 31
    RULE_statementsList = 32
    RULE_exp = 33
    RULE_operands = 34
    RULE_relation = 35
    RULE_index_and_key_op = 36
    RULE_index_op = 37
    RULE_key_op = 38
    RULE_funcall = 39
    RULE_exps_list = 40
    RULE_literal = 41
    RULE_array_lit = 42
    RULE_array_list = 43
    RULE_json_lit = 44
    RULE_json_elems_list = 45
    RULE_json_elems = 46

    ruleNames =  [ "program", "declaration", "var_declare", "vars_list", 
                   "var_typ_asg", "constant_declare", "constant_id_list", 
                   "constant_assign", "id_array", "number_list", "data_types", 
                   "func_declare", "params_list", "param", "stmt", "assign_stmt", 
                   "index_operator", "key_operator", "if_stmt", "elseif_list", 
                   "elseif_func", "else_func", "while_stmt", "for_stmt", 
                   "for_in_stmt", "for_of_stmt", "brk_stmt", "cont_stmt", 
                   "ret_stmt", "ret_stmt_proc", "ret_stmt_func", "call_stmt", 
                   "statementsList", "exp", "operands", "relation", "index_and_key_op", 
                   "index_op", "key_op", "funcall", "exps_list", "literal", 
                   "array_lit", "array_list", "json_lit", "json_elems_list", 
                   "json_elems" ]

    EOF = Token.EOF
    NUMBER_LIT=1
    BOOLEAN_LIT=2
    STRING_LIT=3
    BREAK=4
    CONTINUE=5
    IF=6
    ELIF=7
    ELSE=8
    WHILE=9
    FOR=10
    OF=11
    IN=12
    FUNCTION=13
    LET=14
    TRUE=15
    FALSE=16
    CALL=17
    RETURN=18
    NUMBER=19
    BOOLEAN=20
    STRING=21
    JSON=22
    ARRAY=23
    CONSTANT=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    NOT=30
    AND=31
    OR=32
    ASSIGN=33
    EQ=34
    NEQ=35
    LT=36
    GT=37
    LTE=38
    GTE=39
    ADDS=40
    EQS=41
    LP=42
    RP=43
    LSB=44
    RSB=45
    COLON=46
    DOT=47
    COMMA=48
    SEMI=49
    LCB=50
    RCB=51
    DF=52
    ID=53
    ID_WITH_DOLLAR=54
    WS=55
    BLOCK_COMMENT=56
    ERROR_CHAR=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59
    UNTERMINATED_COMMENT=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CSELParser.DeclarationContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.declaration()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.FUNCTION) | (1 << CSELParser.LET) | (1 << CSELParser.CONSTANT))) != 0)):
                    break

            self.state = 99
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(CSELParser.Var_declareContext,0)


        def constant_declare(self):
            return self.getTypedRuleContext(CSELParser.Constant_declareContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(CSELParser.Func_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_declaration




    def declaration(self):

        localctx = CSELParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.var_declare()
                pass
            elif token in [CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.constant_declare()
                pass
            elif token in [CSELParser.FUNCTION]:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.func_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def vars_list(self):
            return self.getTypedRuleContext(CSELParser.Vars_listContext,0)


        def SEMI(self):
            return self.getToken(CSELParser.SEMI, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_var_declare




    def var_declare(self):

        localctx = CSELParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(CSELParser.LET)
            self.state = 107
            self.vars_list()
            self.state = 108
            self.match(CSELParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_typ_asg(self):
            return self.getTypedRuleContext(CSELParser.Var_typ_asgContext,0)


        def COMMA(self):
            return self.getToken(CSELParser.COMMA, 0)

        def vars_list(self):
            return self.getTypedRuleContext(CSELParser.Vars_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_vars_list




    def vars_list(self):

        localctx = CSELParser.Vars_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vars_list)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.var_typ_asg()
                self.state = 111
                self.match(CSELParser.COMMA)
                self.state = 112
                self.vars_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.var_typ_asg()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typ_asgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def id_array(self):
            return self.getTypedRuleContext(CSELParser.Id_arrayContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def data_types(self):
            return self.getTypedRuleContext(CSELParser.Data_typesContext,0)


        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(CSELParser.ExpContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var_typ_asg




    def var_typ_asg(self):

        localctx = CSELParser.Var_typ_asgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_typ_asg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(CSELParser.ID)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LSB:
                self.state = 118
                self.id_array()


            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 121
                self.match(CSELParser.COLON)
                self.state = 122
                self.data_types()


            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 125
                self.match(CSELParser.ASSIGN)
                self.state = 126
                self.exp(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def constant_id_list(self):
            return self.getTypedRuleContext(CSELParser.Constant_id_listContext,0)


        def SEMI(self):
            return self.getToken(CSELParser.SEMI, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_constant_declare




    def constant_declare(self):

        localctx = CSELParser.Constant_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constant_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(CSELParser.CONSTANT)
            self.state = 130
            self.constant_id_list()
            self.state = 131
            self.match(CSELParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant_assign(self):
            return self.getTypedRuleContext(CSELParser.Constant_assignContext,0)


        def COMMA(self):
            return self.getToken(CSELParser.COMMA, 0)

        def constant_id_list(self):
            return self.getTypedRuleContext(CSELParser.Constant_id_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_constant_id_list




    def constant_id_list(self):

        localctx = CSELParser.Constant_id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constant_id_list)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.constant_assign()
                self.state = 134
                self.match(CSELParser.COMMA)
                self.state = 135
                self.constant_id_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.constant_assign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_WITH_DOLLAR(self):
            return self.getToken(CSELParser.ID_WITH_DOLLAR, 0)

        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(CSELParser.ExpContext,0)


        def id_array(self):
            return self.getTypedRuleContext(CSELParser.Id_arrayContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def data_types(self):
            return self.getTypedRuleContext(CSELParser.Data_typesContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_constant_assign




    def constant_assign(self):

        localctx = CSELParser.Constant_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constant_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(CSELParser.ID_WITH_DOLLAR)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LSB:
                self.state = 141
                self.id_array()


            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 144
                self.match(CSELParser.COLON)
                self.state = 145
                self.data_types()


            self.state = 148
            self.match(CSELParser.ASSIGN)
            self.state = 149
            self.exp(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(CSELParser.LSB, 0)

        def RSB(self):
            return self.getToken(CSELParser.RSB, 0)

        def number_list(self):
            return self.getTypedRuleContext(CSELParser.Number_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_id_array




    def id_array(self):

        localctx = CSELParser.Id_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(CSELParser.LSB)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.NUMBER_LIT:
                self.state = 152
                self.number_list()


            self.state = 155
            self.match(CSELParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Number_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER_LIT(self):
            return self.getToken(CSELParser.NUMBER_LIT, 0)

        def COMMA(self):
            return self.getToken(CSELParser.COMMA, 0)

        def number_list(self):
            return self.getTypedRuleContext(CSELParser.Number_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_number_list




    def number_list(self):

        localctx = CSELParser.Number_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_number_list)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(CSELParser.NUMBER_LIT)
                self.state = 158
                self.match(CSELParser.COMMA)
                self.state = 159
                self.number_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(CSELParser.NUMBER_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(CSELParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(CSELParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(CSELParser.BOOLEAN, 0)

        def JSON(self):
            return self.getToken(CSELParser.JSON, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_data_types




    def data_types(self):

        localctx = CSELParser.Data_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_data_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NUMBER) | (1 << CSELParser.BOOLEAN) | (1 << CSELParser.STRING) | (1 << CSELParser.JSON))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def LP(self):
            return self.getToken(CSELParser.LP, 0)

        def RP(self):
            return self.getToken(CSELParser.RP, 0)

        def LCB(self):
            return self.getToken(CSELParser.LCB, 0)

        def RCB(self):
            return self.getToken(CSELParser.RCB, 0)

        def params_list(self):
            return self.getTypedRuleContext(CSELParser.Params_listContext,0)


        def statementsList(self):
            return self.getTypedRuleContext(CSELParser.StatementsListContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_func_declare




    def func_declare(self):

        localctx = CSELParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(CSELParser.FUNCTION)
            self.state = 166
            self.match(CSELParser.ID)
            self.state = 167
            self.match(CSELParser.LP)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ID:
                self.state = 168
                self.params_list()


            self.state = 171
            self.match(CSELParser.RP)
            self.state = 172
            self.match(CSELParser.LCB)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NUMBER_LIT) | (1 << CSELParser.BOOLEAN_LIT) | (1 << CSELParser.STRING_LIT) | (1 << CSELParser.BREAK) | (1 << CSELParser.CONTINUE) | (1 << CSELParser.IF) | (1 << CSELParser.WHILE) | (1 << CSELParser.FOR) | (1 << CSELParser.FUNCTION) | (1 << CSELParser.LET) | (1 << CSELParser.CALL) | (1 << CSELParser.RETURN) | (1 << CSELParser.CONSTANT) | (1 << CSELParser.SUB) | (1 << CSELParser.NOT) | (1 << CSELParser.LP) | (1 << CSELParser.LSB) | (1 << CSELParser.LCB) | (1 << CSELParser.ID) | (1 << CSELParser.ID_WITH_DOLLAR))) != 0):
                self.state = 173
                self.statementsList()


            self.state = 176
            self.match(CSELParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Params_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(CSELParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(CSELParser.COMMA, 0)

        def params_list(self):
            return self.getTypedRuleContext(CSELParser.Params_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_params_list




    def params_list(self):

        localctx = CSELParser.Params_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_params_list)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.param()
                self.state = 179
                self.match(CSELParser.COMMA)
                self.state = 180
                self.params_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def LSB(self):
            return self.getToken(CSELParser.LSB, 0)

        def RSB(self):
            return self.getToken(CSELParser.RSB, 0)

        def index_op(self):
            return self.getTypedRuleContext(CSELParser.Index_opContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_param




    def param(self):

        localctx = CSELParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.match(CSELParser.ID)
                pass
